--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,6 @@
 	"devDependencies": {
 		"grunt": "^0.4.5",
 		"grunt-contrib-compress": "~0.5.1",
-		"qr-image": "3.1.0",
-		"q": "1.4.1"
+		"qr-image": "3.1.0"
 	}
 }
