--- a/nanpin/package.json
+++ b/nanpin/package.json
@@ -11,7 +11,7 @@
 	],
 	"window": {
 		"title": "node-webkit",
-		"toolbar": false,
+		"toolbar": true,
 		"frame": true,
 		"width": 1200,
 		"height": 800,
@@ -20,7 +20,7 @@
 		"min_height": 600,
 		"max_width": 1920,
 		"max_height": 1080,
-		"show_in_taskbar": false
+		"show_in_taskbar": true
 	},
 	"webkit": {
 		"plugin": true,
